2008-06-02  Bastien Nocera  <hadess@hadess.net>

	* src/totem-subtitle-encoding.c (subtitle_encoding_init),
	(subtitle_encoding_get_charset), (subtitle_encoding_create_store):
	Don't remove encodings that can't pass through ASCII, as UTF-16 and
	UTF-32 certainly won't pass through, spotted by Christian Persch
	<chpe@gnome.org> (Closes: #535823)

2008-05-31  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totem-plugin-viewer.c
	(totem_embedded_update_title), (totem_pl_item_free),
	(totem_embedded_clear_playlist),
	(totem_embedded_open_playlist_item),
	(totem_embedded_get_nice_name_for_stream), (on_got_metadata),
	(totem_embedded_construct), (entry_parsed):
	Listen to got-metadata signal, and set the fullscreen title using
	either the playlist data, or the metadata from the playlist itself

2008-05-31  Christian Persch <chpe@gnome.org>

	* src/totem-preferences.c: (totem_setup_preferences): Use the right
	handler for the delete-event signal. Bug #535952.

2008-05-31  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/totemNPObject.cpp:
	* browser-plugin/totemNarrowSpacePlugin.cpp:
	Fix a warning, and a build failure with debugging disabled

2008-05-30  Christian Persch <chpe@gnome.org>

	* configure.in:
	* Makefile.am:
	* browser-plugin/*: Decomtaminate the plugins. Bug #520629.

2008-05-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-sidebar.c (totem_sidebar_toggle): Remove unused, and
	unneeded GConf setting for "sidebar_shown", spotted by azurief on IRC

2008-05-28  Bastien Nocera  <hadess@hadess.net>

	* configure.in: patch from Richard Hult to fix compilation when X11
	headers are available but aren't the target windowing system (such as
	a MacOS X native build) (Closes: #535151)

2008-05-28  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Remove sticky gnome-vfs req

2008-05-27  Richard Hult  <richard@imendio.com>

	* configure.in: Add gconf-2.0 to pkg-config check for GTK+ only
	build. (Helps: #535151)
